2003-06-04  Graham Percival  <gperlist@shaw.ca>

	* input/test/[d,e]: added texinfo index tags.
	* input/test/empty-staffs.ly: renamed to blank-paper-tab.ly.

2003-06-04  Graham Percival  <gperlist@shaw.ca>

	* Documentation/topdocs/INSTALL.texi: added warning about gxx-3.3.

2003-06-04  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el (LilyPond-blink-matching-open): use no argument,
	as in blink-matching-open.

2003-06-03  Graham Percival  <gperlist@shaw.ca>

	* input/test/[a-c]: more comments in files.
	* input/test/ac-extra-voice.ly beam-abbrev.ly beam-chord.ly beam-dir.ly 
	beam-pos.ly beam-position.ly beam-second.ly beam-suspect.ly 
	beam-trend.ly beams.ly crescendo-text.ly  default-neutral-dir.ly :
	mark file for proposed deletion.
	* input/test: renaming files:
	auto-beam-4-8.ly to beam-auto-4-8.ly
	auto-beam-override.ly to beam-auto-override.ly
	auto-beam.ly to beam-auto.ly
	blank.ly to blank-paper.ly
	absolute-volume.ly to dynamic-absolute-volume.ly

2003-06-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/dpncnt.ly: 
	* input/test/chord-names-dpnj.ly: Resurrect.

	* lily/my-lily-lexer.cc: Remove chordnames keyword.

	* ly/chord-modifiers-init.ly (ignatzekExceptions): Update, tidy up.

	* scm/chord-name.scm (sequential-music-to-chord-exceptions):
	Better docstring, add parameter OMIT-ROOT, tidy up.

2003-06-03  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el: match two-char slurs \[ ... \] and \( ... \).

2003-06-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ascii-script.scm (as-font-alist-alist):
	(as-properties-to-font-name):
	(as-make-style-sheet): Remove.

	* scm/font.scm (as-make-font-list): New function.
	(as-font-sheet-alist): New variable.

	* ly/paper-as9-init.ly: 
	* ly/paper-as5-init.ly: Update.

	* ly/paper-as5.ly:
	* ly/paper-as9.ly: New file.

2003-05-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile (AFM_FILES): Add AF_FILES.

2003-05-28  Graham Percival  <gperlist@shaw.ca>